--- a/src/ui/dropdown/Dropdown.css
+++ b/src/ui/dropdown/Dropdown.css
@@ -1,18 +1,20 @@
 .dropdown{
-    width: 10;
+    width:15%;
     max-width: 180px;
     position: relative;
     margin-left: 20px;
+
 }
 .dropdownTitle{
     padding: 0.5rem;
     border-radius:0.4rem ;
     background-color: transparent;
-    width: 100px;
+    width: 100%;
+    margin-top: 5px;
 }
 .dropdownTitle p{
     font-weight: 500;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     cursor: pointer;
 }
 .dropdownTitle p::after{
@@ -21,6 +23,9 @@
     display: inline-block;
     left: -1.3rem;
     top:18px;
+    background-color: var(--tertiary-color);
+    border-radius: 50%;
+    padding: 2px;
 }
 .dropdownOptions{
     width: 100%;
@@ -29,7 +34,7 @@
     overflow: scroll;
     top: 45px;
     padding: 1rem 0.6rem;
-    background-color: white;
+    background-color: var(--bg-color);
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.148);
     text-align: center;
     display: flex;
@@ -42,12 +47,12 @@
     position: absolute;
 }
 .dropdownOptions::-webkit-scrollbar-track{
-    background-color: white;
+    background-color: var(--bg-color);
 }
 .dropdownOptions::-webkit-scrollbar-thumb{
     background-color: var(--dark-silver);
     border-radius: 100vw;
-    border: .2em solid white;
+    border: .2em solid var(--bg-color);
     visibility: hidden;
 }
 .dropdownOptions:hover::-webkit-scrollbar-thumb{
@@ -62,5 +67,8 @@
     border-radius: 0.5rem;
 }
 .dropdownOptions .option:hover, .option.activeDropdown{
-    border-color: black;
+    border-color: var(--primary-color);
+}
+.dropdown-current{
+    color: var(--primary-color);
 }
