--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -6,7 +6,7 @@
     width: calc(100%-5%);
     position: sticky;
     top: 0;
-    background-color: var(--bg-color);
+    background-color: var(--secondary-color);
     border-bottom: 1px solid var(--border);
     margin-bottom: 20px;
     z-index: 20;
